Fixed home content spacing

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -7,5 +7,5 @@
 }
 
 .home-content {
-	padding: 12px 18px;
+	padding: 22px 20px;
 }
